# llm-wrapper

./: LICENSE  README.md  pyproject.toml
llm_wrapper/: __init__.py  chatgpt.py  utils.py
llm_wrapper/agent/: evaluator.py  serial_chain.py
